--- a/amlodipin.html
+++ b/amlodipin.html
@@ -295,7 +295,7 @@ a.back span {
         <div class="section-title">Cunto iyo cabitaan <small>(Mad og drikke)</small></div>
       </div>
       <ul>
-        <li>Daawadan waxaa la qaadan karaa adigoon wax cunin ama adigoo cunno la qaadanaya.</li><li>Isku day in aad ku qaadato saacad isku mid ah maalin kasta.</li>
+        <li>Daawadan waxaa la qaadan karaa adigoon cunto cunin ama adigoo cunno la qaadanaya.</li><li>Isku day in aad ku qaadato saacad isku mid ah maalin kasta.</li>
       </ul>
     </div>
     
