--- a/symbicort.html
+++ b/symbicort.html
@@ -303,10 +303,10 @@ a.back span {
     <div class="section">
       <div class="section-header">
         <div class="section-icon store">⧉</div>
-        <div class="section-title">Kaydinta daawada <small>(Opbevaring)</small></div>
+        <div class="section-title">Kaydinta daawada iyo nadiifinta <small>(Opbevaring og rengøring)</small></div>
       </div>
       <ul>
-        <li>.</li>
+        <li>Ku kaydi qalabka neefsashada meel qalalan oo ka fog carruurta. Ha dhigin meel qorrax toos ah ama kulayl badan. Afka iyo qaybta aad ku neefsato ku tirtir maro nadiif ah oo qalalan. Ka fogow inaad isticmaasho biyo ama wax qoyan.</li>
       </ul>
     </div>
     
