--- a/lamotrigin.html
+++ b/lamotrigin.html
@@ -27,13 +27,13 @@
 </p>
 <ul>
   <li>Kaniiniga biyo ku liq – hal ama laba jeer maalintii.</li>
-  <li>Si joogto ah u qaado oo ha dhaafin qiyaaso isdaba joog ah.</li>
+  <li>Si joogto ah u qaado, oo ha ka tagin qiyaaso isdaba joog ah.</li>
 </ul>
 
 <h3>Digniino</h3>
 <ul>
-  <li>Finan cusub oo jidhka ka soo baxa → u sheeg dhakhtarka (waxay noqon kartaa xasaasiyad halis ah).</li>
-  <li>Isbadal niyadeed ama fikirro isdil → isla markiiba dhakhtarka ula xidhiidh.</li>
+  <li>Finan cusub oo jirka ka soo baxa → u sheeg dhakhtarka (waxay noqon kartaa xasaasiyad halis ah).</li>
+  <li>Isbadal niyadeed ama fikirro isdil → isla markii dhakhtarka la xiriir.</li>
   <li>Ha joojin daawada si kedis ah.</li>
 </ul>
 
@@ -47,18 +47,14 @@
   Ka hor Ramadaanka, la hadal dhakhtarkaaga si loo hubiyo in daawadaadu ku habboon tahay inta lagu jiro soonka. Dhakhtarku wuxuu go’aamin karaa in qiyaasta ama waqtiga loo baahan yahay in la habeeyo.
 </p>
 <p>
-  Haddii laguu sheego, qiyaasta waxaa lagu qaataa <strong>fiidkii (aftari)</strong> ama <strong>suxuurta</strong>. Ha beddelin waqtiga ama qiyaasta adiga oo aan dhakhtar la tashan.
+  Haddii laguu sheego, qiyaasta waxaa lagu qaataa <strong>fiidkii (afurka kadib)</strong> ama <strong>suxuurta</strong>. Ha beddelin waqtiga ama qiyaasta adiga oo aan dhakhtar la tashan.
 </p>
-<p>
-  Ha dhaafin qiyaaso isdaba joog ah, hana joojin daawada adiga oo keli ah.
+<p>Ha ka tagin qiyaaso isdaba joog ah, hana joojin daawada adiga oo aan dhakhtar la tashan.
 </p>
 
 <h3>Kaydinta (Opbevaring)</h3>
 <ul>
-  <li>Ku hay daawada meel ka fog carruurta.</li>
-  <li>Ku kaydi heerkul ka hooseeya 25 °C, kuna hay baakadka asalka ah.</li>
-  <li>Ha isticmaalin haddii ay dhaafto “EXP”.</li>
-  <li>Ha isticmaalin haddii kaniiniyadu midab beddeleen ama ay dhaawacmaan.</li>
+  <li>.</li>
 </ul>
 
 <div class="footer-note">
