--- a/melatonin.html
+++ b/melatonin.html
@@ -23,7 +23,22 @@
 <ul>
   <li>Waxay keeni kartaa hurdo badan, madax-wareer ama lallabbo khafiif ah.</li>
 </ul>
+  
+<h3>Dhibaatooyinka (Bivirkninger)</h3>
+<ul>
+  <li>Hurdo badan ama daal subaxda.</li>
+  <li>Madax-xanuun ama wareer.</li>
+  <li>Calool-wareem ama lallabbo khafiif ah.</li>
+</ul>
 
+  <h3>Is-dhexgalka daawooyinka (Interaktioner)</h3>
+<ul>
+  <li>Daawooyinka hurdo-dejiya kale waxay kordhin karaan hurdo badan – la tasho dhakhtar ka hor intaadan isku darin.</li>
+  <li>Aalkoladu waxay dhaawacdaa hurdo tayadeeda; waa in laga fogaado marka la qaadanayo Melatonin.</li>
+  <li>Daawooyinka wadnaha qaarkood ama cadaadiska dhiigga waxay la falgali karaan Melatonin – dhakhtarkaaga u sheeg daawo kasta oo aad qaadato.</li>
+</ul>
+
+  
 <h3>Ramadaanka iyo daawada</h3>
 <p>
   La hadal dhakhtarkaaga ka hor Ramadaanka si loo hubiyo waqtiga ugu habboon ee qaadashada Melatonin.
