--- a/lamotrigin.html
+++ b/lamotrigin.html
@@ -37,6 +37,26 @@
   <li>Ha joojin daawada si kedis ah.</li>
 </ul>
 
+  
+<h3>Dhibaatooyinka (Bivirkninger)</h3>
+<ul>
+  <li>Madax-xanuun, wareer ama daal.</li>
+  <li>Lallabbo ama calool-wareem khafiif ah.</li>
+  <li>Hurdo badan ama hurdo la’aan.</li>
+  <li>Gariir (tremor) ama dhaqdhaqaaq aan caadi ahayn.</li>
+</ul>
+
+
+<h3>Is-dhexgalka daawooyinka (Interaktioner)</h3>
+<ul>
+  <li>Daawooyinka ka hortagga suuxdinta qaarkood (tusaale: valproat) waxay kordhin karaan saamaynta Lamotrigin – qiyaasta waxaa haga dhakhtarka.</li>
+  <li>Warfarin ama daawooyinka dhiig-khafiifinta qaarkood waxay u baahan yihiin la socod dheeri ah.</li>
+  <li>Antibiotiko iyo daawooyinka fangaska (antifungal) qaarkood waxay saameyn karaan Lamotrigin.</li>
+  <li>Had iyo jeer dhakhtarka u sheeg daawo kasta oo kale oo aad qaadanayso.</li>
+</ul>
+
+
+  
 <h3>Uurka & Nuujinta</h3>
 <p>
   La hadal dhakhtarka ka hor inta aanad qaadan Lamotrigin haddii aad uur leedahay, uur rabto ama nuujinayso.
