--- a/sertralin.html
+++ b/sertralin.html
@@ -61,7 +61,13 @@ Waxaa lagu qaadan karaa adiga oo cunto cunin ama in aad cunto la qaadato, laakii
 </p>
 
 <h3>Kaydinta (Opbevaring)</h3>
-<ul>
+  </div>
+      <ul>
+        <li>Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C. Ku hay baakadka asalka ah si looga ilaaliyo iftiin iyo huur. Ha qaadan daawada marka ay dhaafto taariikhda "EXP" (daawada goorta ee dhacday) ama haddii oo midabka isbadalay. Wixii soo haray, weydii farmashiyaha sida loogu tuuro meesha ku habboon.</li>
+      </ul>
+    </div>
+    
+  </div>
 
 
 <div class="footer-note">
