--- a/zopiclon.html
+++ b/zopiclon.html
@@ -1,71 +1,192 @@
 <!DOCTYPE html>
 <html lang="so">
 <head>
-  <meta charset="UTF-8">
-  <title>Imozop – warbixin kooban (Somali)</title>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Imozop (Zopiclon) – hurdo la’aan</title>
+
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #e6f2f8;
+  color: #123047;
+  margin: 0;
+}
+
+header {
+  background: linear-gradient(135deg, #0066cc, #00a676);
+  color: #fff;
+  padding: 26px 16px 32px;
+  text-align: center;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+}
+
+header h1 { margin: 0; font-size: 2rem; }
+header p { margin: 6px 0 0; font-size: 1rem; }
+
+main { max-width: 820px; margin: 20px auto 40px; padding: 0 14px; }
+
+a.back {
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+  margin-bottom: 16px;
+  text-decoration: none;
+  color: #00509e;
+}
+
+.card {
+  background: #ffffff;
+  border-radius: 14px;
+  padding: 18px;
+  box-shadow: 0 3px 10px rgba(15, 23, 42, 0.12);
+  border-top: 4px solid #00a676;
+}
+
+.section { margin-top: 14px; padding-top: 10px; border-top: 1px dashed #d0d7e2; }
+
+.section-header {
+  display: flex; align-items: center; gap: 8px; margin-bottom: 6px;
+}
+
+.section-icon {
+  width: 26px; height: 26px; border-radius: 50%;
+  display: inline-flex; align-items:center; justify-content:center;
+  font-size: 0.9rem; color: #123047;
+}
+.section-icon.use { background:#e3f2fd; }
+.section-icon.dose { background:#e2f5ea; }
+.section-icon.side { background:#fff3e0; }
+.section-icon.interact { background:#ede7f6; }
+.section-icon.warn { background:#ffebee; }
+.section-icon.ramadan { background:#e0f7fa; }
+.section-icon.store { background:#edeff9; }
+
+.section-title { font-weight: 700; font-size: 1rem; }
+
+.section ul { margin: 0 0 4px 18px; padding-left: 0; }
+.section ul li { margin-bottom: 6px; font-size: 0.92rem; }
+
+.footer-note {
+  font-size: 0.8rem; color:#607089;
+  text-align: center; margin: 22px 0 12px;
+}
+</style>
 </head>
+
 <body>
 
-<h1>Waa warbixin kooban oo ku saabsan daawada – waxaa loogu talagalay waalidiinta iyo bukaannada Soomaaliyeed.</h1>
-<h2>Imozop (zopiclon)</h2>
+<header>
+  <h1>Imozop (Zopiclon)</h1>
+  <p>Warbixin kooban oo loogu talagalay waalidiinta & bukaannada Soomaaliyeed</p>
+</header>
 
-<h3>Waa maxay Imozop?</h3>
-<p>
-  Imozop waa daawo hurdo oo loo isticmaalo hurdo la’aanta muddo gaaban.
-</p>
+<main>
 
-<h3>Sida loo qaato</h3>
-<p>
-Dadka waaweyn: 7.5 mg ayaa la qaataa 15–30 daqiiqo ka hor hurdada.
+<a href="index.html" class="back">← Ku laabo liiska daawooyinka</a>
 
-Dadka waayeelka ah ama kuwa qaba neef-mareen daciif (kronisk respirationsinsufficiens):
-Qiyaasta bilowga ah waa 3.75 mg 15–30 daqiiqo ka hor hurdada; haddii loo baahdo waxaa loo kordhin karaa 7.5 mg.
+<div class="card">
 
-Ogow:
-Daaweyntu waa in ay noqotaa mid kooban oo lagu qaato qiyaasta ugu hooseysa ee suurtogalka ah.
-Caadiyan waxaa la isticmaalaa ugu badnaan 1–2 toddobaad, ka dibna dhakhtarku dib ayuu u qiimeeyaa haddii loo baahan yahay in la sii wato.
-Waxaa kaliya lagu isticmaali karaa muddo dheer xaalado gaar ah, waxaana loo baahan yahay la socod joogto ah.
-
-<h3>Digniino</h3>
-<ul>
-  <li>Waxay keeni kartaa hurdo badan iyo dawakh maalinta xigta.</li>
-  <li>Waxaa jiri kara khatar ku-xirnaansho haddii muddo dheer la isticmaalo.</li>
-</ul>
-
-  <h3>Dhibaatooyinka (Bivirkninger)</h3>
-<ul>
-  <li>Af qallalan ama dhadhan bir leh (dysgeusi).</li>
-  <li>Madax-xanuun ama wareer.</li>
-  <li>Lallabbo ama calool-wareem khafiif ah.</li>
-  <li>Hurdo badan maalinta xigta (døsighed næste morgen).</li>
-</ul>
-  
-<h3>Is-dhexgalka daawooyinka (Interaktioner)</h3>
-<ul>
-  <li>Ha isku darin Imozop iyo daawooyinka kale ee hurdo-dejiya ama dejinaya (benzodiazepiner, opioid), sababtoo ah waxay kordhiyaan hurdo badan iyo dhibaato neefsasho.</li>
-  <li>Aalkoladu waxay si weyn u kordhisaa dawakh iyo hurdo badan – waa in laga fogaadaa.</li>
-  <li>Daawooyinka maskaxda saameeya qaarkood (tusaale Daawooyinka maskaxda saameeya qaarkood (tusaale: daawooyinka lidka-niyad-jabka ama kuwa lidka-ciladda dhimirka). waxay xoogeyaan saameynta Imozop – dhakhtarka u sheeg daawo kasta oo aad qaadato.</li>
-</ul>
-
-
-<h3>Ramadaanka iyo daawada</h3>
-<p>
-  La hadal dhakhtarka ka hor Ramadaanka si loo hubiyo waqtiga saxda ah ee Imozop.
-</p>
-
-<p>
-  Badanaa waxaa la qaataa <strong>fiidkii (aftari)</strong>. Ha beddelin waqtiga ama qiyaasta adiga oo aan dhakhtar la tashan.
-</p>
-
-<h3>Kaydinta</h3>
-  </div>
-      <ul>
-        <li>Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C. Ku hay baakadka asalka ah si looga ilaaliyo iftiin iyo huur. Ha qaadan daawada marka ay dhaafto taariikhda "EXP" (daawada goorta ee dhacday) ama haddii oo midabka isbadalay. Wixii soo haray, weydii farmashiyaha sida loogu tuuro meesha ku habboon.</li>
-      </ul>
+  <!-- 1. WAA MAXAY -->
+  <div class="section">
+    <div class="section-header">
+      <div class="section-icon use">1</div>
+      <div class="section-title">Waa maxay Imozop?</div>
     </div>
-    
+    <ul>
+      <li>Imozop waa daawo hurdo oo loo isticmaalo hurdo la’aanta muddo gaaban.</li>
+    </ul>
   </div>
 
+  <!-- 2. SIDA LOO QAATO -->
+  <div class="section">
+    <div class="section-header">
+      <div class="section-icon dose">2</div>
+      <div class="section-title">Sida loo qaato</div>
+    </div>
+    <ul>
+      <li>Dadka waaweyn: <strong>7.5 mg</strong> 15–30 daqiiqo ka hor hurdada.</li>
+      <li>Dadka waayeelka ama kuwa neef-mareen daciif ah: <strong>3.75 mg</strong> 15–30 daqiiqo ka hor hurdada; haddii loo baahdo waxaa loo kordhin karaa 7.5 mg.</li>
+      <li><strong>Ogow:</strong> Daaweyntu waa kooban tahay (1–2 toddobaad) iyadoo la adeegsanayo qiyaasta ugu hooseysa.</li>
+    </ul>
+  </div>
 
+  <!-- 3. DIGNIINO -->
+  <div class="section">
+    <div class="section-header">
+      <div class="section-icon warn">!</div>
+      <div class="section-title">Digniino</div>
+    </div>
+    <ul>
+      <li>Waxay keeni kartaa hurdo badan iyo dawakh maalinta xigta.</li>
+      <li>Isticmaalka muddo dheer wuxuu sababi karaa ku-xirnaansho.</li>
+    </ul>
+  </div>
+
+  <!-- 4. BIVIRKNINGER -->
+  <div class="section">
+    <div class="section-header">
+      <div class="section-icon side">3</div>
+      <div class="section-title">Dhibaatooyinka (Bivirkninger)</div>
+    </div>
+    <ul>
+      <li>Af qallalan ama dhadhan bir leh.</li>
+      <li>Madax-xanuun ama wareer.</li>
+      <li>Lallabbo ama calool-wareem khafiif ah.</li>
+      <li>Hurdo badan maalinta xigta (døsighed næste morgen).</li>
+    </ul>
+  </div>
+
+  <!-- 5. INTERAKTIONER -->
+  <div class="section">
+    <div class="section-header">
+      <div class="section-icon interact">4</div>
+      <div class="section-title">Is-dhexgalka daawooyinka (Interaktioner)</div>
+    </div>
+    <ul>
+      <li>Ha isku darin Imozop iyo daawooyinka hurdo-dejiya ama dejinaya (benzodiazepiner, opioider).</li>
+      <li>Aalkoladu waxay si weyn u kordhisaa dawakh & hurdo badan → ka fogow.</li>
+      <li>Daawooyinka maskaxda saameeya qaarkood (tusaale antidepressiva & antipsykotika) waxay xoogeyn karaan saameynta Imozop.</li>
+    </ul>
+  </div>
+
+  <!-- 6. RAMADAN -->
+  <div class="section">
+    <div class="section-header">
+      <div class="section-icon ramadan">☾</div>
+      <div class="section-title">Ramadaanka iyo daawada</div>
+    </div>
+    <ul>
+      <li>La hadal dhakhtarka ka hor Ramadaanka.</li>
+      <li>Badanaa waxaa la qaataa fiidkii (aftari).</li>
+      <li>Ha beddelin waqtiga adiga oo aan dhakhtar la tashan.</li>
+    </ul>
+  </div>
+
+  <!-- 7. KAYDINTA -->
+  <div class="section">
+    <div class="section-header">
+      <div class="section-icon store">⧉</div>
+      <div class="section-title">Kaydinta (Opbevaring)</div>
+    </div>
+    <ul>
+      <li>Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C.</li>
+      <li>Ku hay baakadka asalka ah si looga ilaaliyo iftiin iyo huur.</li>
+      <li>Ha qaadan daawada marka ay dhaafto taariikhda “EXP” (daawada goorta ee dhacday) ama haddii midabka isbeddelay.</li>
+      <li>Wixii soo haray, weydii farmashiyaha sida loogu tuuro meesha ku habboon.</li>
+    </ul>
+  </div>
+
+</div>
+
+<div class="footer-note">
+  Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.
+</div>
+
+<div class="footer-note">
+  Qoraalkan waxaa diyaariyay farmashiiste: Ibrahim Dahir Hanaf
+</div>
+
+</main>
 </body>
 </html>
