--- a/amlodipin.html
+++ b/amlodipin.html
@@ -235,7 +235,7 @@ a.back span {
         <div class="section-title">Isticmaalka <small>(Anvendelse)</small></div>
       </div>
       <ul>
-        <li>Amlodipin waxaa loo isticmaalaa <span class='highlight'>dhiig-karka</span> iyo xanuunka wadnaha (angina).</li><li>Waxay nasisaa xididdada dhiigga si cadaadisku u yaraado.</li>
+        <li>Amlodipin waxaa loo isticmaalaa <span class='highlight'>dhiig-karka</span> iyo xanuunada wadnaha (angina).</li><li>Waxay nasisaa xididdada dhiigga si cadaadisku u yaraado.</li>
       </ul>
     </div>
     
