--- a/amlodipin.html
+++ b/amlodipin.html
@@ -245,7 +245,7 @@ a.back span {
         <div class="section-title">Qiyaasta <small>(Dosering)</small></div>
       </div>
       <ul>
-        <li>Badanaa 5 mg hal mar maalintii; qaar ayaa u baahan 10 mg.</li><li>Qaado isla saacadda maalin kasta, daawadaan waxaa la qaadan karaa adigoon wax cunin ama adigoo cunno la qaadanaya.</li>
+        <li>Badanaa 5 mg hal mar maalintii; qaar ayaa u baahan 10 mg.</li><li>Qaado maalin kasta waqti isku mid ah, daawadaan waxaa la qaadan karaa adigoon wax cunin ama adigoo cunno la qaadanaya.</li>
       </ul>
     </div>
     
