--- a/ibuprofen.html
+++ b/ibuprofen.html
@@ -295,7 +295,7 @@ a.back span {
         <div class="section-title">Cunto iyo cabitaan <small>(Mad og drikke)</small></div>
       </div>
       <ul>
-        <li>Had iyo jeer ibuprofen qaado intaa cuntada cunin ama ama adigoo cunno la qaadanaya - si loo ilaaliyo caloosha.</li><li>Cab biyo ku filan markaad daawada qaadanayso.</li>
+        <li>Had iyo jeer ibuprofen qaado intaa cuntada cunin ama adigoo cunno la qaadanaya - si loo ilaaliyo caloosha.</li><li>Cab biyo ku filan markaad daawada qaadanayso.</li>
       </ul>
     </div>
     
