--- a/quetiapin.html
+++ b/quetiapin.html
@@ -196,14 +196,10 @@ a.back span { font-size:1.1rem; }
       <div class="section-title">Ramadaanka iyo daawada</div>
     </div>
 
-    <p>
-      La hadal dhakhtarkaaga ka hor Ramadaanka si loo habeeyo jadwalka saxda ah ee Quetiapin.
-    </p>
-
-    <p>
-      Qiyaasta waxaa laga yaabaa in lagu qaato <strong>afurka kadib</strong> ama <strong>suxuur</strong>.  
-      Ha samayn isbeddel adiga oo aan dhakhtar la tashan.
-    </p>
+    <p>La hadal dhakhtarkaaga ka hor Ramadaanka si loo habeeyo jadwalka saxda ah ee Quetiapin.</p>
+  
+    <p>Qiyaasta waxaa laga yaabaa in lagu qaato <strong>afurka kadib</strong> ama <strong>suxuur</strong>.  
+      Ha samayn isbeddel adiga oo aan dhakhtar la tashan.</p>
 
     <p>Ha dhaafin qiyaaso isdaba joog ah ama ha joojin daawada adiga oo keli ah.</p>
   </div>
