--- a/zopiclon.html
+++ b/zopiclon.html
@@ -185,10 +185,8 @@ a.back span { font-size:1.1rem; }
 
     <p>Ka hadal dhakhtarka waqtiga saxda ah ee qaadashada Imozop inta lagu jiro Ramadaanka.</p>
 
-    <p>
-      Badanaa waxaa la qaataa <strong>fiidkii (afurka kadib)</strong>.  
-      Ha beddelin waqtiga ama qiyaasta adiga oo aan dhakhtar la tashan.
-    </p>
+    <p>Badanaa waxaa la qaataa <strong>fiidkii (afurka kadib)</strong>.  
+      <p>Ha beddelin waqtiga ama qiyaasta adiga oo aan dhakhtar la tashan.</p>        
   </div>
 
   <!-- KAYDINTA -->
