--- a/quetiapin.html
+++ b/quetiapin.html
@@ -191,18 +191,21 @@ a.back span { font-size:1.1rem; }
 
   <!-- RAMADAN -->
   <div class="section">
-    <div class="section-header">
-      <div class="section-icon ramadan">☾</div>
-      <div class="section-title">Ramadaanka iyo daawada</div>
-    </div>
-
-    <p>La hadal dhakhtarkaaga ka hor Ramadaanka si loo habeeyo jadwalka saxda ah ee Quetiapin.</p>
-  
-    <p>Qiyaasta waxaa laga yaabaa in lagu qaato <strong>afurka kadib</strong> ama <strong>suxuur</strong>.  
-      Ha samayn isbeddel adiga oo aan dhakhtar la tashan.</p>
-
-    <p>Ha dhaafin qiyaaso isdaba joog ah ama ha joojin daawada adiga oo keli ah.</p>
+  <div class="section-header">
+    <div class="section-icon ramadan">☾</div>
+    <div class="section-title">Ramadaanka iyo daawada</div>
   </div>
+
+  <ul>
+    <li>Ka hor Ramadaanka, la hadal dhakhtarkaaga si loo hubiyo in daawadaadu ku habboon tahay inta lagu jiro soonka.</li>
+
+    <li>Haddii laguu sheego, qiyaasta waxaa lagu qaataa <strong>fiidkii (afurka kadib)</strong> ama <strong>suxuurta</strong>.  
+        Ha beddelin waqtiga ama qiyaasta adiga oo aan dhakhtar la tashan.</li>
+
+    <li>Ha ka tagin qiyaaso isdaba joog ah, hana joojin daawada adiga oo aan dhakhtar la tashan.</li>
+  </ul>
+</div>
+
 
 
   <!-- OPBEVARING -->
