--- a/paracetamol.html
+++ b/paracetamol.html
@@ -235,7 +235,7 @@ a.back span {
         <div class="section-title">Isticmaalka <small>(Anvendelse)</small></div>
       </div>
       <ul>
-        <li>Daawadan waxaa loo isticmaalaa <span class='highlight'>xanuun fudud</span> iyo <span class='highlight'>qandho</span> sida madax-xanuun, ilig-xanuun iyo xanuun muruq (muskelsmerter).</li><li>Ma bogsato sababta xanuunka, laakiin waxay kaa caawisaa in xanuunku yaraado oo aad nasato.</li>
+        <li>Daawadan waxaa loo isticmaalaa <span class='highlight'>xanuun fudud</span> iyo <span class='highlight'>qandho</span> sida madax-xanuun, ilig-xanuun iyo xanuun muruq (muskelsmerter).</li><li>Waa daawo oo qaas u aheen xanuunka, laakiin waxay kaa caawineysaa in xanuunku yaraado oo aad ka nasato.</li>
       </ul>
     </div>
     
