--- a/naproxen.html
+++ b/naproxen.html
@@ -295,7 +295,7 @@ a.back span {
         <div class="section-title">Cunto iyo cabitaan <small>(Mad og drikke)</small></div>
       </div>
       <ul>
-        <li>Had iyo jeer ku qaado naproxen adiga oo cunteenaayo.</li><li>Haddii calooshu aad kuu xanuunto, daawada jooji oo la xiriir dhakhtarka.</li>
+        <li>Had iyo jeer ku qaado naproxen adigoo cunto la qaadanaya.</li><li>Haddii calooshu aad kuu xanuunto, daawada jooji oo la xiriir dhakhtarka.</li>
       </ul>
     </div>
     
