--- a/quetiapin.html
+++ b/quetiapin.html
@@ -118,29 +118,30 @@ a.back span { font-size:1.1rem; }
 
 
   <!-- QIYAASTA -->
-  <div class="section">
-    <div class="section-header">
-      <div class="section-icon dose">⏰</div>
-      <div class="section-title">Sida loo qaato</div>
-    </div>
-
-    <ul>
-      <li><strong>Kiniin caadi ah (almindelig tablet)</strong> – dadka waaweyn:  
-        <br>Maalinta 1aad: 50 mg  
-        <br>Maalinta 2aad: 100 mg  
-        <br>Maalinta 3aad: 200 mg  
-        <br>Maalinta 4aad: 300 mg  
-        <br>→ Kadib si tartiib ah ayaa loo kordhiyaa; dayactirka 300–750 mg maalintii (2 jeer maalintii).
-      </li>
-
-      <li><strong>Kiniinnada sii–daynta gaabiska ah (Depottabletter)</strong>:  
-        <br>Hal mar maalintii, ugu yaraan 1 saac ka hor cuntada:  
-        <br>Maalinta 1aad: 300 mg  
-        <br>Maalinta 2aad: 600 mg  
-        <br>→ Dayactirka: 400–800 mg hal mar maalintii.
-      </li>
-    </ul>
+<div class="section">
+  <div class="section-header">
+    <div class="section-icon dose">⏰</div>
+    <div class="section-title">Sida loo qaato <small>(Dosering)</small></div>
   </div>
+
+  <ul>
+    <li><strong>Kiniinka caadiga ah (almindelig tablet)</strong> – dadka waaweyn:
+      <br>Maalinta 1aad: 50 mg
+      <br>Maalinta 2aad: 100 mg
+      <br>Maalinta 3aad: 200 mg
+      <br>Maalinta 4aad: 300 mg
+      <br>→ Kadib qiyaasta waxaa si tartiib ah loo kordhiyaa haddii loo baahdo.
+      <br><strong>Dayactirka:</strong> 300–750 mg maalintii, oo loo qaybiyo 2 jeer maalintii.
+    </li>
+
+    <li><strong>Kiniinnada sii-daynta gaabiska ah (Depottabletter)</strong>:
+      <br>Hal mar maalintii, ugu yaraan 1 saac ka hor cuntada.
+      <br>Maalinta 1aad: 300 mg
+      <br>Maalinta 2aad: 600 mg
+      <br><strong>Dayactirka:</strong> 400–800 mg hal mar maalintii.
+    </li>
+  </ul>
+</div>
 
 
   <!-- DIGNIINO -->
