--- a/paracetamol.html
+++ b/paracetamol.html
@@ -275,7 +275,7 @@ a.back span {
         <div class="section-title">Digniino <small>(Advarsler)</small></div>
       </div>
       <ul>
-        <li>Ha qaadan qiyaas ka badan tan lagu qoray oo baakadka ku taalo ama uu dhakhtarku kuu sheegay.</li><li>Haddii xanuunka ama qandhada aa ka caafimaadin ama ladnaan 3–5 maalmood gudahood, la xiriir dhakhtar.</li>
+        <li>Ha qaadan qiyaas ka badan tan lagu qoray oo baakadka ku taalo ama uu dhakhtarku kuu sheegay.</li><li>Haddii xanuunka ama qandhada aanad caafimaadin, ama ladnaan 3–5 maalmood gudahood, la xiriir dhakhtar.</li>
       </ul>
     </div>
     
