--- a/pantoprazol.html
+++ b/pantoprazol.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Pantoprazol – caloosha &amp; reflux</title>
+<title>Pantoprazol – gaastriga iyo labjeex &amp; reflux</title>
 <style>
 
 body {
