--- a/pantoprazol.html
+++ b/pantoprazol.html
@@ -222,7 +222,7 @@ a.back span {
 
         </div>
         <div class="drug-labels">
-          <div class="drug-name">Pantoprazol – caloosha &amp; reflux</div>
+          <div class="drug-name">Pantoprazol – gaastriga iyo labjeexa &amp; reflux</div>
           <div class="drug-form">Kiniin afka ah (Tablet til at tage gennem munden)</div>
         </div>
       </div>
