--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ footer {
 
   <li><a class="index-link" href="insulin.html"><div class="index-left"><span class="index-title">Insulin</span><span class="index-sub">sonkoroow</span></div><span class="index-icon">➜</span></a></li>
 
-  <li><a class="index-link" href="pantoprazol.html"><div class="index-left"><span class="index-title">Pantoprazol</span><span class="index-sub">caloosha & reflux</span></div><span class="index-icon">➜</span></a></li>
+  <li><a class="index-link" href="pantoprazol.html"><div class="index-left"><span class="index-title">Pantoprazol</span><span class="index-sub">gaastriga iyo labjeexa & reflux</span></div><span class="index-icon">➜</span></a></li>
 
   <li><a class="index-link" href="ventoline.html"><div class="index-left"><span class="index-title">Ventoline</span><span class="index-sub">neef-mareenka</span></div><span class="index-icon">➜</span></a></li>
 
