--- a/lamotrigin.html
+++ b/lamotrigin.html
@@ -100,7 +100,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon use">💊</div>
-      <div class="section-title">Waa maxay Lamotrigin?</div>
+      <div class="section-title">Waa maxay Lamotrigin? <small>(Hvad er Lamotrigin?)</small></div>
     </div>
     <p>
       Lamotrigin waa daawo ka hortagta suuxdinta (epilepsi).  
@@ -113,7 +113,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon use">✔</div>
-      <div class="section-title">Maxaa loo isticmaalaa?</div>
+      <div class="section-title">Maxaa loo isticmaalaa? <small>(Hvad bruges det til?)</small></div>
     </div>
     <ul>
       <li>Suuxdinta (epilepsi).</li>
@@ -126,7 +126,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon dose">⏰</div>
-      <div class="section-title">Sida loo qaato</div>
+      <div class="section-title">Sida loo qaato <small>(Sådan tages medicinen)</small></div>
     </div>
 
     <p>Qaado sida uu dhakhtarka kuu faray. Ha beddelin waqtiga ama qiyaasta adiga oo aan la tashan dhakhtar.</p>
@@ -142,7 +142,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon warn">!</div>
-      <div class="section-title">Digniino</div>
+      <div class="section-title">Digniino <small>(Advarsler)</small></div>
     </div>
     <ul>
       <li>Finan cusub oo jirka ka soo baxa → u sheeg dhakhtarka (waxay noqon kartaa xasaasiyad halis ah).</li>
@@ -156,7 +156,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon side">⚠️</div>
-      <div class="section-title">Dhibaatooyinka (Bivirkninger)</div>
+      <div class="section-title">Dhibaatooyinka <small>(Bivirkninger)</small></div>
     </div>
     <ul>
       <li>Madax-xanuun, wareer ama daal.</li>
@@ -171,7 +171,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon interact">⇆</div>
-      <div class="section-title">Is-dhexgalka daawooyinka</div>
+      <div class="section-title">Is-dhexgalka daawooyinka <small>(Interaktioner)</small></div>
     </div>
     <ul>
       <li>Daawooyinka ka hortagga suuxdinta qaarkood (valproat) waxay kordhin karaan saamaynta Lamotrigin.</li>
@@ -186,7 +186,7 @@ a.back span { font-size:1.1rem; }
  <div class="section">
   <div class="section-header">
     <div class="section-icon ramadan">☾</div>
-    <div class="section-title">Ramadaanka iyo daawada</div>
+    <div class="section-title">Ramadaanka iyo daawada <small>(Fasten og brugen af medicinen)</small></div>
   </div>
 
   <ul>
@@ -204,7 +204,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon store">⧉</div>
-      <div class="section-title">Kaydinta (Opbevaring)</div>
+      <div class="section-title">Kaydinta <small>(Opbevaring)</small></div>
     </div>
     <ul>
       <li>Ku hay meel ka fog carruurta yar yar, kana hooseysa 25 °C.</li>
