--- a/quetiapin.html
+++ b/quetiapin.html
@@ -93,7 +93,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon use">💊</div>
-      <div class="section-title">Waa maxay Quetiapin?</div>
+      <div class="section-title">Waa maxay Quetiapin? <small>(Hvad er Quetiapin?)</small></div>
     </div>
     <p>
       Quetiapin waxaa loo isticmaalaa daaweynta ciladda dhimirka ee “skizofreni”  
@@ -108,7 +108,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon use">✔</div>
-      <div class="section-title">Maxaa loo isticmaalaa?</div>
+      <div class="section-title">Maxaa loo isticmaalaa? <small>(Hvad bruges det til?)</small></div>
     </div>
     <ul>
       <li>Skizofreni (cilad dhimirka).</li>
@@ -121,7 +121,7 @@ a.back span { font-size:1.1rem; }
 <div class="section">
   <div class="section-header">
     <div class="section-icon dose">⏰</div>
-    <div class="section-title">Sida loo qaato <small>(Dosering)</small></div>
+    <div class="section-title">Sida loo qaato <small>(Sådan tages medicinen)</small></div>
   </div>
 
   <ul>
@@ -148,7 +148,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon warn">!</div>
-      <div class="section-title">Digniino</div>
+      <div class="section-title">Digniino <small>(Advarsler)</small></div>
     </div>
     <ul>
       <li>Hurdo badan iyo dawakh.</li>
@@ -161,7 +161,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon side">⚠️</div>
-      <div class="section-title">Dhibaatooyinka (Bivirkninger)</div>
+      <div class="section-title">Dhibaatooyinka <small>(Bivirkninger)</small></div>
     </div>
     <ul>
       <li>Hurdo badan iyo daal.</li>
@@ -176,7 +176,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon interact">⇆</div>
-      <div class="section-title">Is-dhexgalka daawooyinka</div>
+      <div class="section-title">Is-dhexgalka daawooyinka <small>(Interaktioner)</small></div
     </div>
 
     <ul>
@@ -194,7 +194,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
   <div class="section-header">
     <div class="section-icon ramadan">☾</div>
-    <div class="section-title">Ramadaanka iyo daawada</div>
+    <div class="section-title">Ramadaanka iyo daawada <small>(Fasten og brugen af medicinen)</small></div>
   </div>
 
   <ul>
@@ -213,7 +213,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon store">⧉</div>
-      <div class="section-title">Kaydinta (Opbevaring)</div>
+      <div class="section-title">Kaydinta <small>(Opbevaring)</small></div>
     </div>
     <ul>
       <li>Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C.</li>
