--- a/quetiapin.html
+++ b/quetiapin.html
@@ -176,7 +176,7 @@ a.back span { font-size:1.1rem; }
   <div class="section">
     <div class="section-header">
       <div class="section-icon interact">⇆</div>
-      <div class="section-title">Is-dhexgalka daawooyinka <small>(Interaktioner)</small></div
+      <div class="section-title">Is-dhexgalka daawooyinka <small>(Interaktioner)</small></div>
     </div>
 
     <ul>
