--- a/quetiapin.html
+++ b/quetiapin.html
@@ -159,7 +159,7 @@ p { margin-top:10px; margin-bottom:10px; }
   </div>
   <ul>
     <li>Qaabka sii-daynta gaabiska ah (depottabletter) waa in lagu qaataa <strong>ugu yaraan 1 saac kahor cuntada</strong>.</li>
-    <li>Laakiin kiniinnada caadiga ah waa in lagu qaataa. <strong>Hal koob biyo ah (qiyaastii 1.5–2 dl)</strong>.</li>
+    <li>Laakiin kiniinnada caadiga ah waa in lagu qaataa. <strong>Hal koob biyo ah (qiyaas ku habbon 1.5–2 dl)</strong>.</li>
   </ul>
 </div>
 
