--- a/quetiapin.html
+++ b/quetiapin.html
@@ -236,7 +236,7 @@ p { margin-top:10px; margin-bottom:10px; }
     </div>
     <ul>
       <li>Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C.</li>
-      <li>Ku hay baakadka asalka ah si looga ilaaliyo iftiin iyo huur.</li>
+      <li>Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka.</li>
       <li>Ha qaadan daawada marka ay dhaafto taariikhda “EXP” ama haddii midabka isbeddelo.</li>
       <li>Wixii soo haray → u gee farmashiyaha.</li>
     </ul>
