--- a/sertralin.html
+++ b/sertralin.html
@@ -202,7 +202,7 @@ a.back span { font-size:1.1rem; }
     </div>
     <ul>
       <li>Ku hay meel ka fog carruurta, kana hooseeya 25°C.</li>
-      <li>Ku hay baakadka asalka ah si looga ilaaliyo iftiin & huur.</li>
+      <li>Ku hay baakadka asalka ah si looga ilaaliyo iftiinka & huurka.</li>
       <li>Ha qaadan haddii ay dhaafto “EXP” ama midabka isbeddelo.</li>
       <li>Wixii soo haray → ku celi farmashiyaha.</li>
     </ul>
