--- a/zopiclon.html
+++ b/zopiclon.html
@@ -218,7 +218,7 @@ a.back span { font-size:1.1rem; }
     <ul>
       <li>Ku hay meel ka fog carruurta yar.</li>
       <li>Ka hooseeya 25°C.</li>
-      <li>Ku hay baakadka asalka ah → ka ilaali iftiin & huur.</li>
+      <li>Ku hay baakadka asalka ah → ka ilaali iftiinka & huurka.</li>
       <li>Ha qaadan daawada haddii ay dhaafto “EXP” ama midabka isbedelo.</li>
       <li>Wixii soo haray → u gee farmashiyaha.</li>
     </ul>
