--- a/ventoline.html
+++ b/ventoline.html
@@ -236,7 +236,7 @@ a.back span {
         <div class="section-title">Isticmaalka <small>(Anvendelse)</small></div>
       </div>
       <ul>
-        <li>Ventoline (salbutamol) waa buufin la neefsado oo fura marinnada hawada.</li><li>Waxaa loo isticmaalaa neefta (asthma) iyo KOL (xanuunka neef-mareenka oo joogto ah – kronisk obstruktiv lungesygdom) marka neefsashadu adkaato.</li>
+        <li>Ventoline (salbutamol) waa buufin lagu neefsado oo fura marinnada hawada.</li><li>Waxaa loo isticmaalaa neefta (astma) iyo KOL (xanuunka neef-mareenka oo joogto ah – kronisk obstruktiv lungesygdom) marka neefsashadu kugu adkaato.</li>
       </ul>
     </div>
     
