--- a/sertralin.html
+++ b/sertralin.html
@@ -125,7 +125,7 @@ a.back span { font-size:1.1rem; }
       <li>Qiyaasta ugu badan waa 200 mg maalintii.</li>
       <li>Badanaa waxay shaqeysaa 2–4 toddobaad gudahood; saameyn buuxda 6–8 toddobaad.</li>
       <li>Sertralin waxaa lagu liqaa biyo.</li>
-      <li>Waxaa fiican in lagu qaato cuntada kadib si calool-xanuun loo yareeyo.</li>
+      <li>Waxaa fiican in lagu qaato cuntada kadib si calool-xanuunka loo yareeyo.</li>
     </ul>
   </div>
 
@@ -161,7 +161,7 @@ a.back span { font-size:1.1rem; }
       <div class="section-title">Dhibaatooyinka <small>(Bivirkninger)</small></div>
     </div>
     <ul>
-      <li>Lallabbo ama calool-xanuun.</li>
+      <li>Lalabo ama calool-xanuun.</li>
       <li>Madax-xanuun ama wareer.</li>
       <li>Hurdo badan ama hurdo la’aan.</li>
       <li>Miisaanka oo kordha ama rabitaanka cuntada oo badan.</li>
