--- a/morfin_tablet.html
+++ b/morfin_tablet.html
@@ -281,7 +281,7 @@ a.back span {
         <div class="section-title">Ramadaan iyo soonka <small>(Ramadan og faste)</small></div>
       </div>
       <ul>
-        <li>Morfin kiniin wuxuu jebinayaa soonka, laakiin xanuunka daran caafimaadkaaga ayuu saameeyaa.</li><li>La hadal dhakhtar ka hor Ramadaanka si loo helo qorshe badbaado leh oo xanuunkaaga lagu maareeyo.</li>
+        <li>Morfin kiniin wuxuu jabiyaa soonka, laakiin xanuunka daran caafimaadkaaga ayuu saameeyaa.</li><li>La hadal dhakhtar ka hor Ramadaanka si loo helo qorshe badbaado leh oo xanuunkaaga lagu maareeyo.</li>
       </ul>
     </div>
     
