--- a/morfin_tablet.html
+++ b/morfin_tablet.html
@@ -261,7 +261,7 @@ a.back span {
         <div class="section-title">Isdhexgalka daawooyinka <small>(Interaktioner)</small></div>
       </div>
       <ul>
-        <li>Daawooyinka kale ee hurdada keena (benzodiazepiner, daawoyinka hurdada), Khamriga iyo kaabisyada dejinta leh waxay kordhiyaan lulmada iyo khatarta neefsashada oo gaabisa.</li>
+        <li>Daawooyinka kale ee hurdada keena (benzodiazepiner, daawoyinka hurdada), Khamriga iyo fiitaminada oo dejinta leh waxay kordhiyaan lulmada iyo khatarta neefsashada oo yaraata.</li>
       </ul>
     </div>
     
@@ -291,7 +291,7 @@ a.back span {
         <div class="section-title">Cunto iyo cabitaan <small>(Mad og drikke)</small></div>
       </div>
       <ul>
-        <li>Daawadan waxaa la qaadan karaa adigoon cunto cunin ama adigoo cunno la qaadanaya, laakiin la qaado cunto yar waxay yareyn kartaa lalabbada.</li><li>Cab biyo badan si aad uga hortagto calool-fadhiga.</li>
+        <li>Daawadan waxaa la qaadan karaa adigoon cunto cunin ama adigoo cunno la qaadanaya, laakiin la qaado cunto yar waxay yareyn kartaa lalabada.</li><li>Cab biyo badan si aad uga hortagto calool-fadhiga.</li>
       </ul>
     </div>
     
