--- a/melatonin.html
+++ b/melatonin.html
@@ -167,7 +167,7 @@ a.back span { font-size: 1.1rem; }
       <div class="section-title">Digniino <small>(Advarsler)</small></div>
     </div>
     <ul>
-      <li>Waxay keeni kartaa hurdo badan, madax-wareer ama lallabbo khafiif ah.</li>
+      <li>Waxay keeni kartaa hurdo badan, madax-wareer ama lalabo.</li>
     </ul>
   </div>
 
@@ -179,7 +179,7 @@ a.back span { font-size: 1.1rem; }
     <ul>
       <li>Hurdo badan ama daal subaxeed.</li>
       <li>Madax-xanuun ama wareer.</li>
-      <li>Calool-wareem ama lallabbo khafiif ah.</li>
+      <li>Calool-wareem ama lalabo.</li>
     </ul>
   </div>
 
