--- a/melatonin.html
+++ b/melatonin.html
@@ -202,7 +202,7 @@ a.back span { font-size: 1.1rem; }
     </div>
     <ul>
       <li>Badanaa waxaa la qaataa fiidkii (afurka kadib).</li>
-      <li>La hadal dhakhtarka ka hor Ramadaan.</li>
+      <li>La hadal dhakhtarka Ramadaanka ha hor.</li>
     </ul>
   </div>
 
