--- a/melatonin.html
+++ b/melatonin.html
@@ -179,7 +179,7 @@ a.back span { font-size: 1.1rem; }
     <ul>
       <li>Hurdo badan ama daal subaxeed.</li>
       <li>Madax-xanuun ama wareer.</li>
-      <li>Calool-wareem ama lalabo.</li>
+      <li>Calool-xanuun ama lalabo.</li>
     </ul>
   </div>
 
