--- a/melatonin.html
+++ b/melatonin.html
@@ -155,7 +155,7 @@ a.back span { font-size: 1.1rem; }
   </div>
 
   <ul>
-    <li>Daawada waxaa lagu qaataa <strong>hal mar maalintii</strong>, <strong>cunto la’aan ama cunto in lagu qaato</strong>.</li>
+    <li>Daawada waxaa la qaataa <strong>hal mar maalintii</strong>, <strong>intaa aadan cunteen ama cuntada kadib</strong>.</li>
     <li>Waxaa lagu liqaa iyadoo lala cabbo <strong>hal koob biyo ah (qiyaas ahan 1.5–2 dl)</strong>.</li>
   </ul>
 </div>
