--- a/melatonin.html
+++ b/melatonin.html
@@ -155,7 +155,7 @@ a.back span { font-size: 1.1rem; }
   </div>
 
   <ul>
-    <li>Daawada waxaa la qaataa <strong>hal mar maalintii</strong>, <strong>intaa aadan cunteen ama cuntada kadib</strong>.</li>
+    <li>Daawada waxaa la qaataa <strong>hal mar maalintii</strong>, <strong>inta aadan cunteen ama cuntada kadib</strong>.</li>
     <li>Waxaa lagu liqaa iyadoo lala cabbo <strong>hal koob biyo ah (qiyaas ahan 1.5–2 dl)</strong>.</li>
   </ul>
 </div>
@@ -189,7 +189,7 @@ a.back span { font-size: 1.1rem; }
       <div class="section-title">Is-dhexgalka <small>(Interaktioner)</small></div>
     </div>
     <ul>
-      <li>Daawooyinka hurdo-dejiya kale waxay kordhiyaan hurdo badan.</li>
+      <li>Daawooyinka hurdo-dejiya ee kale waxay kordhiyaan hurdo badan.</li>
       <li>Aalkoladu waxay dhaawacdaa hurdada – ka fogow.</li>
       <li>Daawooyinka wadnaha qaarkood waxay la falgeli karaan Melatonin.</li>
     </ul>
