--- a/quetiapin.html
+++ b/quetiapin.html
@@ -223,7 +223,7 @@ p { margin-top:10px; margin-bottom:10px; }
     <li>Haddii laguu sheego, qiyaasta waxaa lagu qaataa <strong>fiidkii (afurka kadib)</strong> ama <strong>suxuurta</strong>.  
         Ha beddelin wakhtiga ama qiyaasta adiga oo aan dhakhtar la tashan.</li>
 
-    <li>Ha ka tagin qiyaaso isdaba joog ah, hana joojin daawada adiga oo aan dhakhtar la tashan.</li>
+    <li>Halaba jeer ha qaadan daawada, hana joojin daawada adiga oo aan dhakhtar la tashan.</li>
   </ul>
   </div>
 
