--- a/paracetamol.html
+++ b/paracetamol.html
@@ -245,7 +245,7 @@ a.back span {
         <div class="section-title">Qiyaasta <small>(Dosering)</small></div>
       </div>
       <ul>
-        <li>Qofka weyn (voksne): 500–1000 mg mar, ugu badnaan 4 jeer maalintii.</li><li>Ha dhaafin <span class='highlight'>4 gram maalintii</span> (4000 mg).</li><li>Carruur: qiyaasta waxaa lagu saleeyaa miisaanka (vægt) – raac qoraalka baakadka ama talada dhakhtarka iyo farmashiyaha.</li>
+        <li>Qofka weyn (voksne): 500–1000 mg mar, ugu badnaan 4 jeer maalintii.</li><li>Ha dhaafin <span class='highlight'>4 gram maalintii</span> (4000 mg).</li><li>Caruurta: qiyaasta waxaa lagu saleeyaa miisaanka (vægt) – raac qoraalka baakadka ama talada dhakhtarka iyo farmashiyaha.</li>
       </ul>
     </div>
     
