--- a/paracetamol.html
+++ b/paracetamol.html
@@ -275,7 +275,7 @@ a.back span {
         <div class="section-title">Digniino <small>(Advarsler)</small></div>
       </div>
       <ul>
-        <li>Ha qaadan qiyaas ka badan tan lagu qoray oo baakadka ku taalo ama uu dhakhtarku kuu sheegay.</li><li>Haddii xanuunka ama qandhada aanad caafimaadin, ama ladnaan 3–5 maalmood gudahood, la xiriir dhakhtar.</li>
+        <li>Ha qaadan qiyaas ka badan tan lagu qoray oo baakadka ku taalo, ama uu dhakhtarku kuu sheegay.</li><li>Haddii xanuunka ama qandhada aanad caafimaadin, ama ladnaan 3–5 maalmood gudahood, la xiriir dhakhtar.</li>
       </ul>
     </div>
     
@@ -305,7 +305,7 @@ a.back span {
     <div class="section-title">Kaydinta daawada <small>(Opbevaring)</small></div>
   </div>
   <ul>
-    <li>Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C. Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka. Ha qaadan daawada marka ay dhaafto taariikhda "EXP" (daawada goorta ee dhacday) ama haddii oo midabka isbadalay. Wixii soo haray, weydii farmashiyaha si loogu tuuro meesha ku habboon.</li>
+    <li>Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C. Ku hay baakadka asalka ah si looga ilaaliyo iftiinka iyo huurka. Ha qaadan daawada marka ay dhaafto taariikhda "EXP" (daawada goorta ee dhacday), ama haddii oo midabka isbadalay. Wixii soo haray, weydii farmashiyaha si loogu tuuro meesha ku habboon.</li>
   </ul>
 </div>
 
