--- a/naproxen.html
+++ b/naproxen.html
@@ -235,7 +235,7 @@ a.back span {
         <div class="section-title">Isticmaalka <small>(Anvendelse)</small></div>
       </div>
       <ul>
-        <li>Naproxen waa daawo xanuun iyo barar (led- og muskelsmerter).</li><li>Waxaa loo isticmaalaa xanuunka caadada iyo xanuuno kale oo joogto ah.</li>
+        <li>Naproxen waa daawo xanuun iyo barar (led- og muskelsmerter).</li><li>Waxaa loo isticmaalaa xanuunka caadada (menstruationssmerter) iyo xanuuno kale oo joogto ah (kroniske lidelser).</li>
       </ul>
     </div>
     
@@ -245,7 +245,7 @@ a.back span {
         <div class="section-title">Qiyaasta <small>(Dosering)</small></div>
       </div>
       <ul>
-        <li>Qiyaasta waxaa badanaa doorta dhakhtar.</li><li>Dadka waaweyn: inta badan 250–500 mg 1–2 jeer maalintii, cunno la jirto.</li>
+        <li>Qiyaasta waxaa badanaa doorta dhakhtarka.</li><li>Dadka waaweyn: inta badan 250–500 mg 1–2 jeer maalintii, waxaa fiican in lagu qaato cuntada kadib, si loo yareeyo calool-xanuunka.</li>
       </ul>
     </div>
     
